<resources>

    <string name="app_name">IsraeliHope</string>
    <string name="save">שמירה</string>
    <string name="cancel">ביטול</string>
    <string name="ok">אישור</string>

    <!-- Welcome Activity -->
    <string name="login">התחברות</string>
    <string name="signup">הרשמה</string>
    <string name="signup_title">פתיחת חשבון</string>
    <string name="login_title">כניסה לחשבון</string>

    <!-- Signup + Login -->
    <string name="user_name">שם משתמש</string>
    <string name="email">אימייל</string>
    <string name="password">סיסמה</string>
    <string name="city">עיר מגורים</string>
    <string name="age">תאריך לידה</string>
    <string name="forgot_password">שכחת סיסמה?</string>
    <string name="log_out">התנתק</string>
    <string name="not_registerd_yet">עדיין לא רשום?</string>
    <string name="create_account">הצטרף לקהילה</string>

    <!-- Error Messages -->
    <string name="enter_details">הכנס פרטים</string>
    <string name="wrong_details">פרטי התחברות שגויים</string>
    <string name="wrong_password">סיסמה שגויה</string>
    <string name="no_internet">אין חיבור לאינטרנט</string>
    <string name="illegal_name">יש לבחור שם משתמש</string>
    <string name="illegal_email">כתובת האימייל לא חוקית</string>
    <string name="illegal_password">יש לבחור סיסמה שמכילה 6 תווים לפחות</string>
    <string name="email_exists">כתובת האימייל כבר קיימת במערכת</string>
    <string name="illegal_age">תאריך הלידה שהוכנס אינו חוקי</string>
    <string name="illegal_image">יש לבחור תמונת פרופיל</string>
    <string name="illegal_city">יש לבחור עיר מגורים מהרשימה</string>
    <string name="try_again">משהו השתבש, נסה שוב</string>

    <!-- Change Password Dialog -->
    <string name="change_password">שינוי סיסמה</string>
    <string name="old_password">סיסמה נוכחית</string>
    <string name="new_password">סיסמה חדשה</string>
    <string name="password_change_success">הסיסמה שונתה בהצלחה</string>
    <string name="enter_password">הכנס את סיסמתך הנוכחית</string>

    <!-- First Quiz -->
    <string name="welcome">ברוכים הבאים!</string>
    <string name="thank_you_for_joining">תודה שהצטרפת לקהילה שלנו.</string>
    <string name="first_quiz_introduction">כעת יוצג בפניך שאלון קצר שיעזור לנו להכיר אותך קצת יותר טוב, ולהבין עד כמה אתה מכיר את האחר.</string>
    <string name="question_number">שאלה מספר</string>

    <!-- Search and Filters -->
    <string name="search_hint">חפש שם של סחבק</string>
    <string name="apply">החל</string>
    <string name="reset">אפס מסננים</string>

    <!-- Challenges -->
    <string name="you_got">קיבלת</string>
    <string name="good_job">כל הכבוד</string>
    <string name="your_answer_is_wrong">ענית תשובה לא נכונה,</string>
    <string name="not_getting_points">לא הרווחת נקודות הפעם…</string>
    <string name="times_up">נגמר הזמן!</string>
    <string name="challenge_sent">האתגר נשלח</string>
    <string name="start_challenge">התחל אתגר</string>
    <string name="challenge_answered_wrong">האתגר נענה לא נכון</string>
    <string name="challenge_answered_correct">האתגר נענה נכון</string>
    <string name="challenge_out_of_time">האתגר לא נענה בזמן</string>
    <string name="challenge">אתגר</string>
    <string name="challenges">אתגרים</string>
    <string name="multichoice_questions">רב ברירה</string>
    <string name="yesno_questions">נכון / לא נכון</string>
    <string name="question_type">סוג השאלה</string>
    <string name="multichoice_question">שאלת רב ברירה</string>
    <string name="yesno_question">שאלת נכון / לא נכון</string>
    <string name="choose_question">בחירת שאלה</string>
    <string name="send_question">שלח שאלה</string>
    <string name="you_got_challenge">קיבלת אתגר</string>
    <string name="you_sent_challenge">שלחת אתגר</string>

    <!-- Chat -->
    <string name="picture">תמונה</string>

    <!-- Days and Months -->
    <string name="today">היום</string>
    <string name="yesterday">אתמול</string>
    <string name="sunday">יום ראשון</string>
    <string name="monday">יום שני</string>
    <string name="tuesday">יום שלישי</string>
    <string name="wednesday">יום רביעי</string>
    <string name="thursday">יום חמישי</string>
    <string name="friday">יום שישי</string>
    <string name="saturday">יום שבת</string>
    <string name="in_january">בינואר</string>
    <string name="in_february">בפברואר</string>
    <string name="in_march">במרץ</string>
    <string name="in_april">באפריל</string>
    <string name="in_may">במאי</string>
    <string name="in_june">ביוני</string>
    <string name="in_july">ביולי</string>
    <string name="in_august">באוגוסט</string>
    <string name="in_september">בספטמבר</string>
    <string name="in_october">באוקטובר</string>
    <string name="in_november">בנובמבר</string>
    <string name="in_december">בדצמבר</string>

    <string name="question_statistics">אחוזי הצלחה</string>
    <string name="muslims">מוסלמים</string>
    <string name="jewish">יהודים</string>
    <string name="christians">נוצרים</string>
    <string name="next">הבא</string>

    <string name="academic_role">תפקיד אקדמי</string>
    <string name="religion_and_intensity">דת ומידת דתיות</string>
    <string name="lets_begin">בואו נתחיל!</string>

    <string-array name="religions">
        <item>יהדות</item>
        <item>איסלאם</item>
        <item>נצרות</item>
        <item>הדת הדרוזית</item>
        <item>הדת שלך</item>
    </string-array>

    <string-array name="religion_measures">
        <item>חילוני</item>
        <item>מסורתי</item>
        <item>דתי</item>
        <item>מידת הדתיות שלך</item>
    </string-array>

    <string-array name="academic_roles">
        <item>סטודנט</item>
        <item>סגל אקדמי</item>
        <item>סגל מנהלי</item>
        <item>התפקיד האקדמי שלך</item>
    </string-array>

    <string-array name="question_types">
        <item>שאלת נכון/לא נכון</item>
        <item>שאלה אמריקאית</item>
        <item>שאלת סימון תשובות</item>
    </string-array>

    <string-array name="question_subjects">
        <item>@string/question_subject_general</item>
        <item>@string/question_subject_jewish</item>
        <item>@string/question_subject_muslim</item>
        <item>@string/question_subject_christian</item>
        <item>@string/question_subject_druze</item>
        <item>@string/question_subject_bedouin</item>
        <item>@string/question_subject_ethiopian</item>
        <item>@string/question_subject_moroccan</item>
    </string-array>

    <string name="question_subject_general">כללי</string>
    <string name="question_subject_jewish">יהדות</string>
    <string name="question_subject_christian">נצרות</string>
    <string name="question_subject_muslim">איסלאם</string>
    <string name="question_subject_druze">דרוזים</string>
    <string name="question_subject_bedouin">בדואים</string>
    <string name="question_subject_ethiopian">אתיופים</string>
    <string name="question_subject_moroccan">מרוקאים</string>
    <string name="users_yous_should_know">משתמשים שכדאי לך להכיר</string>
    <string name="question_not_exists">השאלה כבר לא קיימת במאגר</string>

</resources>
