<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    tools:context=".Dialogs.AddContentToChatDialog">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="7dp">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/cancel"
            android:background="@drawable/background_white_rounded_border"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <Button
                android:id="@+id/multichoice_question"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:drawableRight="@drawable/question_bubble"
                android:drawablePadding="10dp"
                android:paddingHorizontal="15dp"
                android:text="@string/multichoice_question"
                android:textColor="@color/black"
                android:textAlignment="viewStart" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGrey" />

            <Button
                android:id="@+id/yesno_question"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:drawableRight="@drawable/question_bubble"
                android:drawablePadding="10dp"
                android:paddingHorizontal="15dp"
                android:text="@string/yesno_question"
                android:textColor="@color/black"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_white_rounded_border"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>