<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/border_background"
        android:backgroundTint="@color/transparentGrey">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/transparent"
            android:tint="@color/white"
            app:srcCompat="@drawable/arrow_right" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/logo_white"
            android:elevation="10dp"/>

        <LinearLayout
        android:id="@+id/wrong_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_above="@id/email"
        android:visibility="invisible"
        android:layoutDirection="rtl">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/error"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/wrong_details"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_above="@id/email"
            android:visibility="invisible"
            android:layoutDirection="rtl">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginLeft="3dp"
                android:src="@drawable/no_wifi"
                android:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/no_internet"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/enter_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_above="@id/email"
            android:visibility="invisible"
            android:layoutDirection="rtl">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginLeft="3dp"
                android:src="@drawable/error"
                android:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/enter_details"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_above="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border_background"
            android:backgroundTint="@color/transparentGrey"
            android:drawableRight="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/Grey"
            android:textSize="14sp"
            android:drawableTint="@color/white"
            android:textAlignment="viewStart"
            android:layoutDirection="rtl"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_above="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border_background"
            android:backgroundTint="@color/transparentGrey"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/Grey"
            android:textSize="14sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/password"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:textAlignment="viewStart"
            android:layoutDirection="rtl"/>

        <Button
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_above="@id/forgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_border_background"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/forgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:tint="@color/white"
                app:srcCompat="@drawable/circle" />

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/colorPrimaryDark"
                android:foregroundTint="@color/colorPrimaryDark"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:progressTint="@color/colorPrimaryDark" />

        </RelativeLayout>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>