<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack"
    android:layoutDirection="rtl"
    tools:context=".SendChallengeActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_semi_round_up"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/choose_question"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title"
            android:layout_marginTop="5dp"
            android:background="@color/colorLightGrey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questions_RV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/add_filter_layout"
            android:layout_below="@id/divider"
            android:clipToPadding="false"
            android:paddingVertical="5dp" />

        <View
            android:id="@+id/add_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/lightGrey"
            android:elevation="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:elevation="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal|bottom"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <Button
                android:id="@+id/clear_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/reset"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/filter"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/filter" />

            <Button
                android:id="@+id/apply_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/apply"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_types_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/add_filter_layout"
            android:layout_marginBottom="15dp"
            android:background="@color/lightGrey"
            android:elevation="10dp"
            android:gravity="center"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_types_RV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>